Completed testing of ParseBottomLevel and ParseLValue.